--- a/curso-luis-otavio/modelo02/assets/css/style.css
+++ b/curso-luis-otavio/modelo02/assets/css/style.css
@@ -67,3 +67,11 @@ form button:hover, form button:active{
     border: 2px solid #fff;
     background-color: var(--primary-color-gray);
 }
+
+#messageResult{
+    background-color: var(--primary-color);
+}
+
+#messageResult p{
+    padding: 5px;
+}
